# ByteDB

./: .gitignore  Cargo.toml  README.md  strip_comments.py
.github/workflows/: ci.yml  release.yml
bytedb-bench/: Cargo.toml
bytedb-bench/src/: main.rs
bytedb-client/: Cargo.toml
bytedb-client/src/: connection.rs  formatter.rs  main.rs  protocol.rs  repl.rs
bytedb-core/: Cargo.toml
bytedb-core/src/: backup.rs  blob.rs  chaos.rs  compress.rs  error.rs  lib.rs  metrics.rs  migration.rs
bytedb-core/src/buffer/: frame.rs  mod.rs  pool.rs  replacer.rs
bytedb-query/: Cargo.toml
bytedb-query/src/: error.rs  lib.rs
bytedb-query/tests/: aggregate_expr.rs  aggregates.rs  append_log.rs  arithmetic.rs  blob_spill.rs  check_persistence.rs  composite_key.rs  concurrent_writes.rs  constraints.rs  correlated_subquery.rs  crash_atomicity.rs  edge_cases.rs  empty_aggregate.rs  explain.rs  fk_cascade.rs  fk_checks.rs  fk_validate.rs  group_by_keys.rs  insert_coercion.rs  insert_values.rs  isolation.rs  no_pk_tables.rs  null_join.rs  null_logic.rs  parallel_scan.rs  parse_cache.rs  resource_limits_wiring.rs  rollback_atomicity.rs  scientific_notation.rs  secondary_index.rs  select_no_from.rs  ssi.rs  ssi_probe.rs  subquery_cache.rs  table_eviction.rs
bytedb-server/: Cargo.toml
bytedb-server/src/: config.rs  connection.rs  error.rs  lib.rs  main.rs  metrics.rs  server.rs  tls.rs
bytedb-server/src/auth/: credentials.rs
bytedb-server/src/protocol/: codec.rs  message.rs
tests/integration/: btree_tests.rs  parser_tests.rs  query_tests.rs  wal_tests.rs
(+64 files in other folders)
