[workspace]
members = [
    "bytedb-core",
    "bytedb-query",
    "bytedb-server",
    "bytedb-client",
    "bytedb-bench",
]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
authors = ["ByteDB Contributors"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
