[package]
name = "bytedb-server"
version.workspace = true
edition.workspace = true

[dependencies]
bytedb-core = { path = "../bytedb-core" }
bytedb-query = { path = "../bytedb-query" }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
clap = { version = "4", features = ["derive"] }
argon2 = "0.5"
